# rickety-cricket

./: .coverage  .dockerignore  .ebignore  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt
app/lambda/: lambda_function.py
app/utils/: api_helpers.py  data_helpers.py  db_helpers.py
app/web/: app.py
app/web/templates/: base.html  index.html  result.html  track_model_performance.html
docker/: Dockerfile.lambda
model_training/: check_data.ipynb  feature_statistics.html  preprocess_data.py  train_model.ipynb
modelling/: check_data.ipynb  preprocess_data.py  train_model.ipynb
production/: Dockerfile  api_helpers.py  model.cbm  other_helpers.py  predict_winner.py  predictions.py  requirements.txt
requirements/: dev.txt  lambda.txt
src/lambda/: lambda_function.py
src/utils/: api_helpers.py  data_helpers.py  db_helpers.py
src/web/: app.py
src/web/templates/: result.html
tests/: test_preprocess_data.py
utils/: api_helpers.py  data_helpers.py  db_helpers.py
web_app/: app.py  requirements.txt
web_app/templates/: base.html  error.html  index.html
