[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rickety-cricket"
version = "0.1.0"
description = "Live cricket predictions with web interface & performance monitoring."
requires-python = ">=3.9"

[tool.setuptools]
packages = ["src", "model_training"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov=model_training --cov-report=term-missing"